# graphics

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  basicUML.txt
.cache/clangd/index/: Input.cpp.17199E2990FA175A.idx  Input.hpp.C2362296A47A3EF2.idx  _fixes.hpp.572DF84CC99038D3.idx  _vectorize.hpp.8A047C4C43FFAD21.idx  common.hpp.0A24D70E26EA8F0B.idx  component.cpp.834D65AFA86928FC.idx  component.hpp.0A538ED807827C85.idx  compute_common.hpp.9CC112628F647591.idx  compute_vector_relational.hpp.57999C479A91D684.idx  constants.hpp.0F625FB516AB1E9A.idx  constants.inl.13ECEDF622DEEFE3.idx  (+265 more)
assets/shaders/: lightShader.frag  objectShader.frag  vertex.vert
include/: Input.hpp  component.hpp  engine.hpp  file.hpp  game_object.hpp  gameloop.hpp  gameobject.hpp  graphics_api.hpp  graphics_api_backup.hpp  graphics_components.hpp  graphics_components_backup.hpp  light.hpp  material.hpp  math.hpp  mesh.hpp  scene.hpp  shader.hpp  texture.hpp  vector3D.hpp  vertex.hpp  window.hpp
include/KHR/: khrplatform.h.gch
include/core/: config.hpp  types.hpp
include/glad/: glad.h
include/renderer/: helloTriangle.hpp  window.hpp
include/resource_management/: factory.hpp  file.hpp  resource.hpp  resource_manager.hpp  resource_storage.hpp  shader.hpp
include/resources/: resource.hpp  resource_manager.hpp  shader.hpp
res/shaders/: fragmentShader.shader  light_compute.comp  shader.frag  shader.vert  vertexShader.shader
src/: CMakeLists.txt  Input.cpp  component.cpp  engine.cpp  file.cpp  game_object.cpp  gameloop.cpp  gameobject.cpp  glad.c  graphics.cpp  graphics_api.cpp  graphics_api_backup.cpp  graphics_components.cpp  graphics_components_backup.cpp  light.cpp  main.cpp  material.cpp  math.cpp  mesh.cpp  scene.cpp  shader.cpp  texture.cpp  vector3D.cpp  vertex.cpp  window.cpp
src/core/: config.cpp
src/renderer/: CMakeLists.txt  MetalWindow.mm  window.cpp
src/resource_management/: CMakeLists.txt  factory.cpp  file.cpp  resource.cpp  resource_manager.cpp  resource_storage.cpp  shader.cpp
src/resources/: CMakeLists.txt  resource.cpp  resource_manager.cpp  shader.cpp
(+3 files in other folders)
